Project

General

Profile

Actions

Bug #13956

closed

prtvtoc.c:386: error: idx may be used uninitialized in this function

Added by Klaus Ziegler almost 2 years ago. Updated almost 2 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
cmd - userland programs
Start date:
Due date:
% Done:

100%

Estimated time:
2.00 h
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Build errors with gcc compilers: 4.4.4 / 7.5.0 and 10.2.0 on SPARC

Actions #1

Updated by Rich Lowe almost 2 years ago

  • Project changed from OpenIndiana Distribution to illumos gate
  • Category changed from OS/Net (Kernel and Userland) to cmd - userland programs
  • Target version deleted (2021.04)
Actions #2

Updated by Klaus Ziegler almost 2 years ago

  • Gerrit CR set to 1608
Actions #3

Updated by Klaus Ziegler almost 2 years ago

  • Gerrit CR changed from 1608 to 1611
Actions #4

Updated by Klaus Ziegler almost 2 years ago

  • Subject changed from prtvtoc.c:386: error: 'idx' may be used uninitialized in this function to prtvtoc.c:386: error: idx may be used uninitialized in this function
Actions #5

Updated by Electric Monk almost 2 years ago

  • Status changed from New to Closed
  • % Done changed from 80 to 100

git commit 03074a12e5b3eb5b96ab8b5d9bd21883e57a020c

commit  03074a12e5b3eb5b96ab8b5d9bd21883e57a020c
Author: Klaus Ziegler <klausz@haus-gisela.de>
Date:   2021-07-22T23:37:08.000Z

    13956 prtvtoc.c:386: error: idx may be used uninitialized in this function
    Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
    Reviewed by: Sebastian Wiedenroth <wiedi@frubar.net>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF